--- a/public/index.html
+++ b/public/index.html
@@ -376,6 +376,9 @@
   <div class="mt-10 text-center text-sm text-white/60">
     &copy; 2025 TurnLogic AI. All rights reserved.
   </div>
-  <script defer src="https://vercel.com/analytics/script.js"></script>
+  <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </footer>
 </html>
