Update SEO meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <!-- SEO + Social -->
-  <meta name="description" content="We build AI systems that save you time and grow your business." />
-  <meta property="og:title" content="TurnLogic AI" />
-  <meta property="og:description" content="We build AI systems that save you time and grow your business." />
-  <meta property="og:image" content="/assets/img/og-image.png" />
-  <meta property="og:url" content="https://turnlogicai.com" />
-  <meta name="twitter:card" content="summary_large_image" />
+ <!-- SEO + Social -->
+<meta name="description" content="TurnLogic AI (also known as Turn Logic AI) builds AI systems that save you time and grow your business." />
+<meta property="og:title" content="TurnLogic AI" />
+<meta property="og:description" content="We build AI systems that save you time and grow your business." />
+<meta property="og:image" content="/assets/img/og-image.png" />
+<meta property="og:url" content="https://turnlogicai.com" />
+<meta name="twitter:card" content="summary_large_image" />
 
 
-<link rel="icon" href="/assets/img/favicon3.ico" type="image/x-icon" />
+
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
   <title>TurnLogic AI</title>
 
